fix(accessibilité): améliore la structure WAVE et les contrastes

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -24,6 +24,7 @@
     font-size: abs.$fs-xs;
     letter-spacing: 4px;
     text-transform: uppercase;
+    color: abs.$color-text;
   }
 
   &__infos {
