--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,9 +1,8 @@
 @use "../abstracts" as abs;
 
 .navbar {
-  position: sticky;
-  top: 0;
-  z-index: 1000;
+  position: relative;
+  z-index: 1;
 
   display: flex;
   justify-content: space-between;
@@ -124,7 +123,7 @@
 
   &__section {
     color: abs.$color-title-amber;
-    opacity: 0.65;
+    opacity: 0.85;
   }
 
   &__label {
